--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ pubspec.lock
 doc/
 build/
 .idea/workspace.xml
+
+example/.flutter-plugins-dependencies
+example/ios/Flutter/flutter_export_environment.sh
