--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,23 +9,31 @@ environment:
   # flutter.plugin.platforms map.
   flutter: ">=1.12.0 <2.0.0"
 
+dependency_overrides:
+  crypto: ^3.0.0-nullsafety
+  built_value_generator:
+    git:
+      url: git://github.com/google/built_value.dart.git
+      path: built_value_generator
+      ref: be0feaf544ef576d459e1949bfd51dec1199bd7d
+
 dependencies:
-  built_collection: '>=2.0.0 <5.0.0'
-  built_value: '>=5.5.5 <8.0.0'
+  built_collection: ^5.0.0-nullsafety
+  built_value: ^8.0.0-nullsafety
   uuid: '>=2.0.4 <3.0.0'
-  meta: '>=1.1.6 <2.0.0'
+  meta: ^1.3.0-nullsafety
 
   flutter:
     sdk: flutter
 
-  encrypt: ^4.0.0
-  crypto: ^2.1.3 #Encryption
+  encrypt: ^4.1.0
+  crypto: ^3.0.0-nullsafety #Encryption
   hex: ^0.1.2   #convert to hex
-  password_hash: ^2.0.0
+
 dev_dependencies:
   build_runner: ^1.0.0
-  built_value_generator: ^7.0.9
-  pedantic: ^1.8.0
+  built_value_generator: ^7.1.0
+  pedantic: ^1.10.0-nullsafety
 
   flutter_test:
     sdk: flutter
