--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,7 @@ description: Demonstrates how to use the couchbase_lite plugin.
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0-133.7.beta <3.0.0'
 
 dependency_overrides:
   crypto: ^3.0.0-nullsafety
@@ -15,17 +15,17 @@ dependency_overrides:
 
 dependencies:
   # rxdart is used for the database and observable response classes
-  rxdart: ^0.23.1
+  rxdart: ^0.26.0-nullsafety
   http: ^0.12.0+2
   package_info: ^0.4.0+6
-  url_launcher: ^5.1.2
+  url_launcher: ^6.0.0-nullsafety
 
   flutter:
     sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   build_runner: ^1.0.0
