--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,11 @@ environment:
 
 dependency_overrides:
   crypto: ^3.0.0-nullsafety
-  built_value_generator:
-    git:
-      url: git://github.com/google/built_value.dart.git
-      path: built_value_generator
-      ref: be0feaf544ef576d459e1949bfd51dec1199bd7d
 
 dependencies:
   built_collection: ^5.0.0-nullsafety
   built_value: ^8.0.0-nullsafety
-  uuid: '>=2.0.4 <3.0.0'
+  uuid: ^3.0.0-nullsafety
   meta: ^1.3.0-nullsafety
 
   flutter:
@@ -32,7 +27,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.0.0
-  built_value_generator: ^7.1.0
+  built_value_generator: ^8.0.0-nullsafety
   pedantic: ^1.10.0-nullsafety
 
   flutter_test:
