--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,15 +5,11 @@ publish_to: 'none'
 environment:
   sdk: '>=2.12.0-133.7.beta <3.0.0'
 
-dependency_overrides:
-  crypto: ^3.0.0
-  args: ^1.6.0
-
 dependencies:
   # rxdart is used for the database and observable response classes
-  rxdart: ^0.26.0-nullsafety
-  http: ^0.12.0+2
-  package_info: ^0.4.0+6
+  rxdart: ^0.26.0
+  http: ^0.13.0
+  package_info: ^2.0.0
   url_launcher: ^6.0.0-nullsafety
 
   flutter:
@@ -25,7 +21,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.0.0
-  built_value_generator: ^8.0.0-nullsafety
+  built_value_generator: ^8.0.2
 
   flutter_test:
     sdk: flutter
