--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,27 +9,23 @@ environment:
   # flutter.plugin.platforms map.
   flutter: ">=1.12.0 <2.0.0"
 
-dependency_overrides:
-  crypto: ^3.0.0
-  args: ^1.6.0
-
 dependencies:
-  built_collection: ^5.0.0-nullsafety
-  built_value: ^8.0.0-nullsafety
-  uuid: ^3.0.0-nullsafety
-  meta: ^1.3.0-nullsafety
+  built_collection: ^5.0.0
+  built_value: ^8.0.2
+  uuid: ^3.0.1
+  meta: ^1.3.0
 
   flutter:
     sdk: flutter
 
   encrypt: ^5.0.0-beta
   crypto: ^3.0.0 #Encryption
-  hex: ^0.1.2   #convert to hex
+  hex: ^0.2.0   #convert to hex
 
 dev_dependencies:
   build_runner: ^1.0.0
-  built_value_generator: ^8.0.0-nullsafety
-  pedantic: ^1.10.0-nullsafety
+  built_value_generator: ^8.0.2
+  pedantic: ^1.11.0
 
   flutter_test:
     sdk: flutter
