--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,22 +10,22 @@ environment:
   flutter: ">=1.12.0 <2.0.0"
 
 dependencies:
-  built_collection: ^5.0.0
-  built_value: ^8.0.2
-  uuid: ^3.0.1
+  built_collection: ^5.1.0
+  built_value: ^8.1.0
+  uuid: ^3.0.4
   meta: ^1.3.0
 
   flutter:
     sdk: flutter
 
-  encrypt: ^5.0.0-beta
-  crypto: ^3.0.0 #Encryption
+  encrypt: ^5.0.0
+  crypto: ^3.0.1 #Encryption
   hex: ^0.2.0   #convert to hex
 
 dev_dependencies:
-  build_runner: ^1.0.0
-  built_value_generator: ^8.0.2
-  pedantic: ^1.11.0
+  build_runner: ^2.0.5
+  built_value_generator: ^8.1.0
+  pedantic: ^1.11.1
 
   flutter_test:
     sdk: flutter
