--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   built_collection: ^5.1.0
   built_value: ^8.1.0
   uuid: ^3.0.4
-  meta: ^1.3.0
+  meta: '>=1.3.0 <3.0.0'
 
   flutter:
     sdk: flutter
